# openSourceCodeBased

./: README.md
fluidsynth/: CMakeLists.txt
fluidsynth/include/: fluidsynth.cmake
fluidsynth/include/fluidsynth/: audio.h  event.h  log.h  midi.h  sfont.h  synth.h  types.h
fluidsynth/src/: CMakeLists.txt  config.cmake
fluidsynth/src/bindings/: fluid_filerenderer.c  fluid_ladspa.c
fluidsynth/src/midi/: fluid_midi.c  fluid_midi.h  fluid_midi_router.c  fluid_seq.c  fluid_seqbind.c
fluidsynth/src/rvoice/: fluid_adsr_env.h  fluid_chorus.c  fluid_rev.c  fluid_rvoice.c  fluid_rvoice.h  fluid_rvoice_event.c  fluid_rvoice_event.h  fluid_rvoice_mixer.c  fluid_rvoice_mixer.h
fluidsynth/src/sfloader/: fluid_defsfont.c  fluid_defsfont.h  fluid_ramsfont.c  fluid_sfont.h
fluidsynth/src/synth/: fluid_chan.c  fluid_chan.h  fluid_event.c  fluid_mod.c  fluid_synth.c  fluid_synth.h  fluid_tuning.c  fluid_voice.c  fluid_voice.h
fluidsynth/src/utils/: fluid_hash.c  fluid_hash.h  fluid_list.c  fluid_list.h  fluid_ringbuffer.c  fluid_settings.c  fluid_sys.c  fluid_sys.h  fluidsynth_priv.h
pitchTracker/: FFT.cpp  FFT.h  audioCommon.cpp  audioCommon.h  debugUtils.cpp  pitchTracker.cpp  pitchTracker.h
pitchTracker/doc/: 마이크입력_음정_검출_2020042401.pptx
